WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273086
REGRESSION (
277389@main
): [iOS] AutoFill not offered on autofocus with an attached hardware keyboard
https://bugs.webkit.org/show_bug.cgi?id=273086
Summary
REGRESSION (277389@main): [iOS] AutoFill not offered on autofocus with an att...
Aditya Keerthi
Reported
2024-04-22 13:42:16 PDT
rdar://126653124
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-04-22 14:02:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27597
EWS
Comment 2
2024-04-24 20:56:35 PDT
Committed
277961@main
(e1e849f259d0): <
https://commits.webkit.org/277961@main
> Reviewed commits have been landed. Closing PR #27597 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug