Source/WebKit/DerivedSources.make
@@ -623,6 +623,7 @@ SERIALIZATION_DESCRIPTION_FILES = \
 	Shared/InspectorExtensionTypes.serialization.in \
 	Shared/ios/DynamicViewportSizeUpdate.serialization.in \
 	Shared/ios/GestureTypes.serialization.in \
+	Shared/ios/HardwareKeyboardState.serialization.in \
 	Shared/ios/InteractionInformationAtPosition.serialization.in \
 	Shared/ios/InteractionInformationRequest.serialization.in \
 	Shared/ios/WebAutocorrectionContext.serialization.in \
